--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -566,8 +566,10 @@ main {
 }
 
 .img-items img {
-  width: 550px;
-  height: 450px;
+  width: 100%;
+  max-width: 550px;
+  height: auto;
+  max-height: 450px;
   object-fit: cover;
 }
 
@@ -601,6 +603,19 @@ main {
 }
 
 @media (max-width: 640px) {
+  :root {
+    --navbar-height: auto;
+  }
+
+  .container {
+    width: min(1120px, 94vw);
+  }
+
+  .navbar__inner {
+    min-height: auto;
+    padding: 14px 0;
+  }
+
   .navbar__brand {
     font-size: 1.6rem;
   }
@@ -614,8 +629,17 @@ main {
     align-items: flex-start;
   }
 
+  .button-link {
+    width: 100%;
+    justify-content: center;
+  }
+
   .feature-panel {
     padding: 2.4rem;
+  }
+
+  .img-items img {
+    max-height: 280px;
   }
 }
 
